Bug 1417601 - Override dirty rect for OOF frames with containing block outside a modified stacking context r=mattwoodrow a=gchang

MozReview-Commit-ID: DqvdDECU7dM